--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+moxa-uart-control (1.1.3+deb9) stretch; urgency=low
+
+  * Add message for setting mode
+  * Fix getopt issue of `mx-uart-ctl`
+  * Fix wording in the usage of `mx-uart-ctl`
+
+ -- Ken CJ Chou <KenCJ.Chou@moxa.com>  Wed, 02 May 2018 15:08:00 +0800
+
 moxa-uart-control (1.1.2+deb9) unstable; urgency=low
 
   * Fix issue for attempting to free static array
