--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+moxa-uart-control (1.1.4+deb9) stretch; urgency=low
+
+  * Remove mx_errmsg.
+  * Change install directory for libmx_uart_ctl.so*
+    from `/lib/<arch>` to `/usr/lib/<arch>`.
+
+ -- Ken CJ Chou <KenCJ.Chou@moxa.com>  Wed, 02 May 2018 15:08:00 +0800
+
 moxa-uart-control (1.1.3+deb9) stretch; urgency=low
 
   * Add message for setting mode
