--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+moxa-uart-control (1.1.6+deb9) stretch; urgency=low
+
+  [ Elvis CW Yao ]
+  * feat: lib: add mode group into method 'FILEPATH'
+    for supporting x86 products
+
+  [ Alif Chen ]
+  * feat: lib: Add method 'IOCTL_MU860' UART control
+    for UC-8420/UC-8410A
+
+ -- Ken CJ Chou <KenCJ.Chou@moxa.com>  Thu, 07 Nov 2019 15:07:00 +0800
+
 moxa-uart-control (1.1.4+deb9) stretch; urgency=low
 
   * Remove mx_errmsg.
